2007-11-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs: 
	Refactored some of the animation logic, fade old track text out and
	new track text in while the cover art xfades

2007-11-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/InterfaceActionService.cs:
	Provide an expand override for adding items to toolbars

	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	Remove the spacing, since the track info header will expand

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs:
	Draw pango layouts for displaying the track information

	* src/Core/Nereid/Nereid/PlayerInterface.cs: Expand the TrackInfoDisplay

	* src/Core/Hyena.Gui/Hyena.Data.Gui/CairoExtensions.cs: Added 
	ColorGetHex and ColorAdjustBrightness methods

2007-11-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs:
	Use a timeout instead of idle to limit the number of frames rendered;
	if debugging is on, print the number of fps per transition

	* src/Core/Banshee.Core/Banshee.Base/Log.cs: Added a DebugFormat method

2007-11-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/ConnectedSeekSlider.cs:
	An adaptor around the seek slider and stream position label that connects
	itself to the necessary engine events

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs: 
	A connected header view for showing cover art and track information; 
	currently only shows cover art but is 100% cairo-drawn and does cross
	fading. Sexy.

	* src/Core/Nereid/Nereid/PlayerInterface.cs: Removed all player engine
	event handling; embed ConnectedSeekSlider and TrackInfoDisplay; at this
	point the main client UI is effectively stupid and only embeds smart
	widgets - makes writing new client UIs very, very easy
